# ceepur-scraper

./: .gitignore  README.md  pyproject.toml
ceepur_scraper/: __init__.py  csv_writer.py  models.py
